# NETProtocols

./: .gitignore  README.md  conftest.py  pyproject.toml
.github/workflows/: black.yml  pytest.yml
netprotocols/: __init__.py  packet.py  protocol.py
netprotocols/base/: packet.py  protocol.py
netprotocols/layer2/: arp.py  ethernet.py
netprotocols/layer3/: icmp.py  ip.py
netprotocols/layer4/: tcp.py  udp.py
netprotocols/utils/: __init__.py  exceptions.py  random_mac.py  validation.py
netprotocols/utils/validation/: _base.py  ipv4.py  mac.py
protocols/: __init__.py  packet.py  protocol.py
protocols/layer2/: arp.py  ethernet.py
protocols/layer3/: icmp.py  ip.py
protocols/layer4/: tcp.py  udp.py
tests/tests_base/: test_packet.py  test_protocol.py
tests/tests_layer2/: test_arp.py  test_ethernet.py
tests/tests_layer3/: test_icmp.py  test_ip.py
tests/tests_layer4/: test_tcp.py  test_udp.py
tests/tests_util/: test_random_mac.py  test_utils.py  test_validation.py
tests/tests_util/validation/: test_ipv4_validation.py  test_mac_validation.py
