[tool.poetry]
name = "protocols"
version = "0.1.0"
description = "Low-level implementations of common networking protocols"
authors = ["EONRaider <livewire_voodoo@protonmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6,<4.0"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
