[tool.poetry]
name = "netprotocols"
version = "0.3.0"
description = "Low-level implementations of common networking protocols"
authors = ["EONRaider <livewire_voodoo@protonmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6,<4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
