[tool.poetry]
name = "netprotocols"
version = "0.4.8"
description = "Low-level implementations of common networking protocols"
authors = ["EONRaider <livewire_voodoo@protonmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
